src/objects/Sub_Project__c.object
<CustomObject>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Billing Profile</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maker</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Strike</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Sub_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActualGrossProfitCopy__c</fullName>
        <formula>IF(Synced_with_Xero__c || Checked__c, 
      IF(ISPICKVAL(Account_Type__c, &quot;Strike&quot;), 
      Invoice_Amount__c - AdWordsSpend__c, 
           IF(Invoice_Amount__c &gt;= 0,
              Invoice_Amount__c,
              Client_Spend__c - AdWordsSpend__c)
         ), 
Expected_Gross_Profit__c)
- Ad_Serving_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Gross Profit No Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Gross_Profit_Social_Rollup__c</fullName>
        <label>Actual Gross Profit Social Rollup</label>
        <summarizedField>Payment__c.Actual_Gross_Profit_New__c</summarizedField>
        <summaryFilterItems>
            <field>Payment__c.Platform_Type__c</field>
            <operation>equals</operation>
            <value>Social</value>
        </summaryFilterItems>
        <summaryForeignKey>Payment__c.Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_Gross_Profit_YT_Rollup__c</fullName>
        <label>Actual Gross Profit YT Rollup</label>
        <summarizedField>Payment__c.Actual_Gross_Profit_New__c</summarizedField>
        <summaryFilterItems>
            <field>Payment__c.Platform_Type__c</field>
            <operation>equals</operation>
            <value>YT</value>
        </summaryFilterItems>
        <summaryForeignKey>Payment__c.Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AdWordsSpend__c</fullName>
        <label>Media Spend</label>
        <summarizedField>Payment__c.AdWordsSpend__c</summarizedField>
        <summaryForeignKey>Payment__c.Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AdWords_Spend_report__c</fullName>
        <formula>IF(TODAY() &gt;= End_Date__c+3, AdWordsSpend__c, Media_Order__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Media Spend (report)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ad_Serving_Costs__c</fullName>
        <label>Ad Serving Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AuthorizationDate__c</fullName>
        <label>Authorization Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BillingConditionDiscountTerms__c</fullName>
        <description>Activates Discount Violation column on PlanComponent</description>
        <formula>Project__r.BillingCondition__r.Discount_Terms__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Condition Discount Terms</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillingConditionRebate__c</fullName>
        <formula>Project__r.BillingCondition__r.Rebate_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Condition Rebate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Billing_Condition__c</fullName>
        <label>Billing Condition Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Conditions__c</fullName>
        <formula>Project__r.BillingCondition__r.Name</formula>
        <label>Billing Conditions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Profile__c</fullName>
        <formula>TEXT(Account_Type__c)</formula>
        <label>Billing Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BypassValidationRule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BypassValidationRule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSemail__c</fullName>
        <label>CSemail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Campaign_Status__c</fullName>
        <formula>IF( 
AND( Start_Date__c &lt;= TODAY(),TODAY() &lt;= End_Date__c) ,&quot;In Progress&quot;, 
IF(TODAY() &gt; End_Date__c,&quot;Finished&quot;, 
&quot;Planned&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClientSpendRollUp__c</fullName>
        <label>ClientSpendRollUp</label>
        <summarizedField>Payment__c.Client_Spend__c</summarizedField>
        <summaryForeignKey>Payment__c.Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Client_Spend_Defined_on_IO__c</fullName>
        <formula>Project__r.Client_Spend_Defined_on_IO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Spend Defined on IO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Spend_Social_rollup__c</fullName>
        <label>Client Spend Social rollup</label>
        <summarizedField>Payment__c.Client_Spend__c</summarizedField>
        <summaryFilterItems>
            <field>Payment__c.Platform_Type__c</field>
            <operation>equals</operation>
            <value>Social</value>
        </summaryFilterItems>
        <summaryForeignKey>Payment__c.Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Client_Spend_YT_rollup__c</fullName>
        <label>Client Spend YT rollup</label>
        <summarizedField>Payment__c.Client_Spend__c</summarizedField>
        <summaryFilterItems>
            <field>Payment__c.Platform_Type__c</field>
            <operation>equals</operation>
            <value>YT</value>
        </summaryFilterItems>
        <summaryForeignKey>Payment__c.Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Client_Spend__c</fullName>
        <label>Client Spend</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Actual_Rebate__c</fullName>
        <description>That field indicates that Actual Rebates on Contract has been changed and some recalculation should be done on related Project records</description>
        <inlineHelpText>That field indicates that Actual Rebates on Contract has been changed and some recalculation should be done on related Project records</inlineHelpText>
        <label>Contract Actual Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Billing_Condition_Id__c</fullName>
        <description>That field indicates that Billing Condition on Contract has been changed and some recalculation should be done on related Project records</description>
        <inlineHelpText>That field indicates that Billing Condition on Contract has been changed and some recalculation should be done on related Project records</inlineHelpText>
        <label>Contract Billing Condition Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End_Issue__c</fullName>
        <formula>Project__r.Contract_Ended__c != Contract_Ended__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract End Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Ended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract End Date+3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <formula>HYPERLINK( &apos;https://strike.my.salesforce.com/&apos;&amp;Project__r.Id , Project__r.Name  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditNotesAmount__c</fullName>
        <label>Credit Notes Amount</label>
        <summarizedField>CreditNote__c.XeroAmount__c</summarizedField>
        <summaryFilterItems>
            <field>CreditNote__c.Status__c</field>
            <operation>equals</operation>
            <value>Authorised, Paid</value>
        </summaryFilterItems>
        <summaryForeignKey>CreditNote__c.Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Days_Since_Invoiced__c</fullName>
        <formula>Today() - End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Invoiced</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_running__c</fullName>
        <formula>End_Date__c - Start_Date__c +1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days running</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DefaultClientServicesRepEmail__c</fullName>
        <formula>Project__r.BrandAccount__r.DefaultClientServicesRep__r.Email</formula>
        <label>DefaultClientServicesRepEmail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivered__c</fullName>
        <label>Delivered</label>
        <summarizedField>Payment__c.AmountDelivered__c</summarizedField>
        <summaryForeignKey>Payment__c.Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Discount_Terms__c</fullName>
        <label>Discount Terms</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Violation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discount Violation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <formula>IF(!Discount_Violation__c &amp;&amp; Paid__c,
Client_Spend__c * Rebate__c,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Date_Elapsed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>End Date Elapsed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExpectedRebate__c</fullName>
        <formula>Rebate__c * (
  IF (CONTAINS(Billing_Condition__c, &apos;Instant Rebate&apos;),
    (Client_Spend__c - Media_Order__c),
    IF (TEXT(Margin_Type__c) = &apos;% of Media&apos;, Media_Order__c, Client_Spend__c)
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Gross_Profit__c</fullName>
        <label>Expected Gross Profit</label>
        <summarizedField>Payment__c.Expected_Gross_Profit_New__c</summarizedField>
        <summaryForeignKey>Payment__c.Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Final_Margin__c</fullName>
        <formula>if(and(Client_Spend__c &lt;&gt; 0, 
       or(Checked__c, Synced_with_Xero__c, !ispickval(XeroStatus__c,&quot;&quot;)
          )
        ), 
Gross_Profit_Report__c / Client_Spend__c, 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Gross_Profit_Report__c</fullName>
        <formula>IF(Synced_with_Xero__c || Checked__c,
   Actual_Gross_Profit_Social_Rollup__c + Actual_Gross_Profit_YT_Rollup__c,
Expected_Gross_Profit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Gross Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Profit__c</fullName>
        <formula>Client_Spend__c - Media_Order__c - ExpectedRebate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Gross Profit OLD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HasPendingCreditNotes__c</fullName>
        <formula>NumberOfPendingCreditNotes__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HasPendingCreditNotes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InvoiceAmountRollUp__c</fullName>
        <label>Invoice Amount RollUp</label>
        <summarizedField>Payment__c.InvoiceAmount__c</summarizedField>
        <summaryForeignKey>Payment__c.Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>InvoiceNotificationSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoice Notification Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount_Social__c</fullName>
        <label>Invoice Amount Social</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount_YT__c</fullName>
        <label>Invoice Amount YT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoicingLocked__c</fullName>
        <formula>TODAY() &lt; LockedUntil__c &amp;&amp; PaymentType__c!=&apos;100% Upfront&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoicing Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LockedUntil__c</fullName>
        <formula>IF(Project__r.Account__r.InvoicingDelay__c &gt; 0, End_Date__c + Project__r.Account__r.InvoicingDelay__c, End_Date__c + 5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Locked Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Margin_Type__c</fullName>
        <label>Margin Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>% of Budget</fullName>
                    <default>true</default>
                    <label>% of Budget</label>
                </value>
                <value>
                    <fullName>% of Media</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <label>Margin</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MaxSpendDate__c</fullName>
        <label>MaxSpendDate</label>
        <summarizedField>Payment__c.MaxMediaSpendDate__c</summarizedField>
        <summaryForeignKey>Payment__c.Payment__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MediaOrderRollUp__c</fullName>
        <label>MediaOrderRollUp</label>
        <summarizedField>Payment__c.Media_Order__c</summarizedField>
        <summaryForeignKey>Payment__c.Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MediaSpendAssigned__c</fullName>
        <formula>End_Date__c = MaxSpendDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Media Spend Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Media_Order__c</fullName>
        <formula>IF(ISPICKVAL(Margin_Type__c,&apos;% of Media&apos;),
   Client_Spend__c / (1+Margin__c),
   Client_Spend__c * (1-Margin__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Media Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NumberOfPendingCreditNotes__c</fullName>
        <label>NumberOfPendingCreditNotes</label>
        <summaryFilterItems>
            <field>CreditNote__c.Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </summaryFilterItems>
        <summaryForeignKey>CreditNote__c.Payment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Sub_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OverlapsContractDates__c</fullName>
        <formula>((Project__r.Start_Date__c &lt;= Start_Date__c) &amp;&amp; (Start_Date__c &lt;= Project__r.End_Date__c)) 
  || ((Project__r.Start_Date__c &lt;= End_Date__c) &amp;&amp; (End_Date__c &lt;= Project__r.End_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overlaps Contract Dates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PaymentType__c</fullName>
        <formula>TEXT(Project__r.Payment_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Invoice Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Net 30</fullName>
                </value>
                <value>
                    <fullName>Net 45</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
                <value>
                    <fullName>Net 90</fullName>
                </value>
                <value>
                    <fullName>Net 120</fullName>
                </value>
                <value>
                    <fullName>50/50</fullName>
                </value>
                <value>
                    <fullName>100% Upfront</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProjectID__c</fullName>
        <formula>Project__r.Project_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Strike ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Contract</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Sub_Projects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ProjectsImpressionsSpend__c</fullName>
        <label>Projects Impressions Spend</label>
        <summarizedField>Payment__c.Client_Spend__c</summarizedField>
        <summaryFilterItems>
            <field>Payment__c.CostStructure__c</field>
            <operation>equals</operation>
            <value>CPM</value>
        </summaryFilterItems>
        <summaryForeignKey>Payment__c.Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ProjectsViewsSpend__c</fullName>
        <label>Projects Views Spend</label>
        <summarizedField>Payment__c.Client_Spend__c</summarizedField>
        <summaryFilterItems>
            <field>Payment__c.CostStructure__c</field>
            <operation>equals</operation>
            <value>CPV</value>
        </summaryFilterItems>
        <summaryForeignKey>Payment__c.Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rebate__c</fullName>
        <label>Rebate</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Project__r.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RevisedAmount__c</fullName>
        <label>Revised Amount</label>
        <summarizedField>CreditNote__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>CreditNote__c.Status__c</field>
            <operation>equals</operation>
            <value>Authorised, Paid</value>
        </summaryFilterItems>
        <summaryForeignKey>CreditNote__c.Payment__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SpendExceededNotificationSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SpendExceededNotificationSent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SpendExceeded__c</fullName>
        <formula>ROUND(AdWordsSpend__c, 2) &gt; ROUND(Media_Order__c, 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Spend Exceeded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SuggestedSpend__c</fullName>
        <label>Suggested Spend</label>
        <summarizedField>Payment__c.SuggestedSpend__c</summarizedField>
        <summaryForeignKey>Payment__c.Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Suggested_Client_Spend__c</fullName>
        <formula>IF(AND(TODAY()&gt;=End_Date__c+1, Margin__c!=1),
   SuggestedSpend__c,
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suggested Client Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Synced_with_Xero__c</fullName>
        <formula>ISBLANK(Xero_ID__c) == false</formula>
        <label>Synced with Xero</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Revenue__c</fullName>
        <formula>IF(ISPICKVAL(Account_Type__c, &quot;Client&quot;), Client_Spend__c - Media_Order__c, Client_Spend__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Revenue_report__c</fullName>
        <formula>if(Synced_with_Xero__c || !ispickval( XeroStatus__c,&quot;&quot;), Invoice_Amount__c,Total_Revenue__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>XeroStatus__c</fullName>
        <label>Xero Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Authorised</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Xero_ID__c</fullName>
        <externalId>true</externalId>
        <label>Xero ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xero_Invoice__c</fullName>
        <formula>IF(Xero_ID__c==&apos;No Invoice&apos; || Invoice__c==&apos;No Invoice&apos;,
&apos;No Invoice&apos;,
IF(!ISBLANK(Xero_ID__c),
HYPERLINK(&quot;https://go.xero.com/AccountsReceivable/Edit.aspx?InvoiceID=&quot; &amp; Xero_ID__c,
IF(!ISBLANK(Invoice__c),Invoice__c,&quot;View&quot;)),
&quot;Not Available&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If you encounter error after clicking on the &apos;View&apos; link please log into Xero and switch the instance.</inlineHelpText>
        <label>Xero Invoice</label>
        <type>Text</type>
    </fields>
    <label>Payment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Account__c</columns>
        <columns>ProjectID__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Paid__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>IO_vs_Actual_Variance</fullName>
        <columns>Account__c</columns>
        <columns>Account_Type__c</columns>
        <columns>Billing_Conditions__c</columns>
        <columns>BillingConditionRebate__c</columns>
        <columns>Project__c</columns>
        <columns>Invoice__c</columns>
        <columns>End_Date__c</columns>
        <columns>Paid__c</columns>
        <columns>Client_Spend__c</columns>
        <columns>Suggested_Client_Spend__c</columns>
        <columns>Media_Order__c</columns>
        <columns>AdWords_Spend_report__c</columns>
        <columns>Final_Margin__c</columns>
        <filterScope>Everything</filterScope>
        <label>IO vs Actual Variance</label>
        <sharedTo>
            <group>Finance</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Payment_Profile</fullName>
        <columns>Account__c</columns>
        <columns>Project__c</columns>
        <columns>Billing_Conditions__c</columns>
        <columns>Xero_Invoice__c</columns>
        <columns>Final_Margin__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Gross_Profit_Report__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Payment_Type__c</columns>
        <columns>Payment_Date__c</columns>
        <columns>End_Date_Elapsed__c</columns>
        <filterScope>Everything</filterScope>
        <label>Payment Profile</label>
        <sharedTo>
            <group>Finance</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Payments_not_overriden</fullName>
        <columns>Project__c</columns>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Client_Spend__c</columns>
        <columns>Invoice_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2015</value>
        </filters>
        <filters>
            <field>Start_Date__c</field>
            <operation>lessThan</operation>
            <value>10/1/2015</value>
        </filters>
        <label>Payments not overriden</label>
    </listViews>
    <listViews>
        <fullName>Tangible_Rebate</fullName>
        <columns>ProjectID__c</columns>
        <columns>Xero_Invoice__c</columns>
        <columns>Account__c</columns>
        <columns>Project__c</columns>
        <columns>Account_Type__c</columns>
        <columns>Client_Spend__c</columns>
        <columns>Media_Order__c</columns>
        <columns>MediaOrderRollUp__c</columns>
        <columns>Margin__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>End_Date_Elapsed__c</columns>
        <columns>Payment_Date__c</columns>
        <columns>Paid__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>equals</operation>
            <value>Tangible Media Inc.</value>
        </filters>
        <filters>
            <field>End_Date_Elapsed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Paid__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Account_Type__c</field>
            <operation>equals</operation>
            <value>Client</value>
        </filters>
        <label>Tangible Rebate</label>
        <sharedTo>
            <group>Finance</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X8_31_16</fullName>
        <columns>Account__c</columns>
        <columns>Project__c</columns>
        <columns>Billing_Conditions__c</columns>
        <columns>Xero_Invoice__c</columns>
        <columns>Final_Margin__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Gross_Profit_Report__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Payment_Type__c</columns>
        <columns>Payment_Date__c</columns>
        <columns>End_Date_Elapsed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>6/1/2016</value>
        </filters>
        <label>8/31/16</label>
        <sharedTo>
            <group>Finance</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Payment Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <recordTypes>
        <fullName>Payment</fullName>
        <active>true</active>
        <label>Payment</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CannotEditPaymentAfterInvoice</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(BypassValidationRule__c) &amp;&amp; 
!priorvalue(BypassValidationRule__c) &amp;&amp;
AND($Profile.Name != &apos;System Administrator&apos;, $User.Id !=&quot;005U0000003mAzn&quot;,$User.CanDeletePPs__c = FALSE, 
NOT(ISBLANK(Xero_ID__c)), 
OR(ISCHANGED(Client_Spend__c), ISCHANGED(Start_Date__c), ISCHANGED(End_Date__c)
)
)</errorConditionFormula>
        <errorMessage>Cannot update Payment after Invoice has been issued</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PaymentMarginNotEditable</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(BypassValidationRule__c) &amp;&amp; 
!priorvalue(BypassValidationRule__c) &amp;&amp;
Margin__c != Project__r.Margin__c &amp;&amp; ischanged(Margin__c)</errorConditionFormula>
        <errorDisplayField>Margin__c</errorDisplayField>
        <errorMessage>Please define margin on Contract level.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StartDateBiggerThanEndDate</fullName>
        <active>true</active>
        <errorConditionFormula>Start_Date__c &gt; End_Date__c</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>Payment Start Date cannot be later than End Date.</errorMessage>
    </validationRules>
</CustomObject>